<resources>
    <string name="app_name">Stores</string>
    <string name="description_iv_photo_store">Store\'s image</string>
    <string name="description_add_store">Add store</string>
    <string name="hint_name">Name</string>
    <string name="helper_required">Required</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_website">Website</string>
    <string name="hint_photo_url">Photo URL</string>
    <string name="form_store_title_add">Create store</string>
    <string name="menu_save">Save</string>
    <string name="save">Save</string>
    <string name="form_store_message_success">Store saved correctly</string>
    <string name="arg_id" translatable="false">arg_id</string>
    <string name="form_store_message_invalid">There\'s empty required fields</string>
    <string name="form_store_title_edit">Edit store</string>
    <string name="delete_dialog_title">Delete store?</string>
    <string name="delete_dialog_confirm">Delete</string>
    <string name="delete_dialog_cancel">Cancel</string>
    <string name="options_dialog_title">Select an option:</string>
    <string name="main_error_no_website">Empty website</string>
    <string name="main_error_no_resolve">No compatible app was found</string>
    <string name="store_option_delete">Delete</string>
    <string name="store_option_dial">Dial</string>
    <string name="store_option_go_website">Go website</string>
    <string name="exit_dialog_title">Are you sure you want to leave?</string>
    <string name="exit_dialog_message">Unsaved changes will be lost</string>
    <string name="exit_dialog_ok">Exit</string>
</resources>