<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FormStoreFragment"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_2x"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_store"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_name"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_2x"
            android:hint="@string/hint_phone"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_local_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_phone"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_2x"
            android:hint="@string/hint_website"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_link">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="@integer/lines_url_website"
                android:minLines="@integer/lines_url_website"
                android:inputType="textMultiLine"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/color_link"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_padding_2x"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_photo_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_photo_url"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_link">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_photo_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="@integer/lines_url_photo"
                    android:maxLines="@integer/lines_url_photo"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_link"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_marginStart="@dimen/common_padding_1x"
                android:id="@+id/iv_photo"
                android:layout_width="@dimen/photo_size_thumb"
                android:layout_height="@dimen/photo_size_thumb"
                android:src="@drawable/ic_image"
                android:contentDescription="@string/description_iv_photo_store"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>